added faced design pattern example

--- a/FacadeDemo/FacadeDemo/FacadeDemo.csproj
+++ b/FacadeDemo/FacadeDemo/FacadeDemo.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EconomicsFacade.cs" />
     <Compile Include="Economics\ComplexEconomicsManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
